<resources>
    <string name="app_name">Sun Bluetooth</string>
    <string name="action_settings">Settings</string>
    <string name="lp_name_hint">Enter name of Local Program</string>
    <string name="lp_content_hint">Enter Local Program</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="create_lp">Create LP</string>
    <string name="edit_lp">Edit LP</string>
    <string name="action_deleteLocalPrograms">Delete All LP\'s</string>
    <string name="load_sample_lp">Load Sample LP</string>
    <string name="clear_fields">Clear Fields</string>
    <string name="load_sample_LP">Load a sample Local Program</string>
    <string name="cancel">Cancel</string>
    <string name="discover">Discover</string>
    <string name="paired">Paired</string>
    <string name="paired_bt_devices">Paired Bluetooth Devices</string>
    <string name="cham">CHAM:</string>
    <string name="user">USER:</string>
    <string name="wait">WAIT:</string>
    <string name="set">SET:</string>
    <string name="searching_for_bluetooth_devices">searching for bluetooth devices…</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="delete_lp">Delete LP</string>
    <string name="lp_download_hint"> Select a local program location (0-9) and press the download button to
        download the local program from controller to this device \n\n-  or select SAVED LP\'s from the menu to display a list of saved Local Programs on this device.</string>

    <string name="tc02_lp_download_hint">Press the download button to
        download the local program from TC02 controller to this device \n\n-  or select SAVED LP\'s from the menu to display a list of saved Local Programs on this device.</string>
    <string name="status">STATUS</string>
    <string name="status_unavailable">Status unavailable</string>
    <string name="pound_sign">###</string>
    <string name="p_default">.15</string>
    <string name="i_default">.001</string>
    <string name="d_default">.1</string>
    <string name="pwmp_default">2</string>
    <string name="utl_default">300</string>
    <string name="ltl_default">-200</string>
    <string name="download_lp">download local program</string>
    <string name="run_lp">run local program</string>
    <string name="save_lp">save local program</string>
    <string name="stop_lp">stop local program</string>
    <string name="upload_lp">upload local program</string>
    <string name="edit_lp_long_desc">Edit Local Program</string>
    <string name="lp_bkpnt">continue from local program breakpoint</string>
    <string name="log_file_null_message">NO LOG FILES TO VIEW</string>
    <string name="no_bluetooth_message">No bluetooth devices found</string>
    <string name="forever">FOREVER</string>
    <string name="set_param_message">Setting parameters, please wait…</string>
    <string name="get_param_message">Getting parameters, please wait…</string>
    <string name="bluetooth_not_connected">Bluetooth not connected</string>
    <string name="controller_busy">Controller busy, please wait</string>
    <string name="download_parameters_message">Downloading parameters, please wait</string>
    <string name="disc_mode">Discovery mode</string>
    <string name="connecting">Connecting…</string>
    <string name="bluetooth_enabled_message">App requires bluetooth to be enabled</string>
    <string name="app_title">Sun Bluetooth</string>
    <string name="no_paired_dev">No Paired Devices</string>
    <string name="connection_lost">Connection Lost</string>
    <string name="share_logging_file">Share temperature logging file…</string>
    <string name="exit_help">Exit help section</string>
    <string name="loading_file_message">Loading file…</string>
    <string name="monitor">Monitor</string>
    <string name="local_program">Local Program</string>
    <string name="log_files">Log Files</string>
    <string name="no_logging_files">No Temperature Logging Files</string>
    <string name="def_cont_type">ec1x</string>
    <string name="pref_cont_type">pref_controller_type</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="controller_mode_0_desc">Control to CH1 probe</string>
    <string name="controller_mode_1_desc">Control to avg of CH1 and CH2 probes</string>
    <string name="controller_mode_2_desc">Slowly force CH2 to set</string>
    <string name="controller_mode_3_desc">Control to CH2 probe</string>
    <string name="controller_mode_4_desc">Control to avg of CH1 and CH2, then slowly force CH2 to set</string>
    <string name="bluetooth_connection_lost">Bluetooth Connection Lost</string>
    <string name="reconnect">RECONNECT</string>
    <string name="ec1x_rs_echo_message">RS232 ECHO is ON. Please turn off ECHO by entering SDEF MENU and setting RS Char Echo to N</string>
    <string name="no_resp_message">No response. Verify RS handshaking off, baud rate = 9600</string>
    <string name="infinity">INFINITY</string>
    <string name="enter_segment">Enter Segment</string>
    <string name="timeout_message">Timeout occurred</string>
    <string name="reset">RESET</string>
    <string name="continuous">Continuous</string>
    <string name="delete_all_profiles">Delete All Profiles</string>
    <string name="save_profile">Save Profile to database</string>
    <string name="sample_profile_low_temp">-50</string>
    <string name="sample_profile_high_temp">150</string>
    <string name="sample_profile_room_temp">25</string>
    <string name="sample_profile_hour">60</string>
    <string name="sample_profile_five_min">5</string>
    <string name="sample_profile_cycles">10</string>
    <string name="none">NONE</string>
    <string name="input">RESULT:</string>
    <string name="profile">Profiles</string>
    <string name="monitor_view">Monitor View</string>
    <string name="live_chart_view">Live Chart View</string>
    <string name="save_live_chart">Save Live Chart</string>
    <string name="stop">STOP</string>

    <string-array name="controller_types">
        <item>EC1x</item>
        <item>EC127</item>
        <item>PC100</item>
        <item>TC02</item>
        <item>PC1000</item>
        <item>PC100–2</item>
        <item>TC01/EC0X</item>


    </string-array>
    <array name="cont_type_values">
        <item>ec1x</item>
        <item>ec127</item>
        <item>pc100</item>
        <item>tc02</item>
        <item>pc1000</item>
        <item>pc100_2</item>
        <item>tc01</item>

    </array>

    <string-array name="lp_dropdown_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>

    </string-array>
    <array name="cycle_number_array">

        <item>I0</item>
        <item>I1</item>
        <item>I2</item>
        <item>I3</item>
        <item>I4</item>
        <item>I5</item>
        <item>I6</item>
        <item>I7</item>
        <item>I8</item>
        <item>I9</item>

    </array>

    <string-array name="pid_values">
        <item>-9</item>
        <item>-8</item>
        <item>-7</item>
        <item>-6</item>
        <item>-5</item>
        <item>-4</item>
        <item>-3</item>
        <item>-2</item>
        <item>-1</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
</resources>
