<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="10dp"
    >


    <EditText
        android:id="@+id/lpName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:hint="@string/lp_name_hint"
        android:inputType="textPersonName"
        />


    <EditText
        android:id="@+id/lpContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/lp_content_hint"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <ImageButton
            android:id="@+id/saveLPButton"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/save_to_phone"
            app:srcCompat="@drawable/ic_save_black_48dp"/>



        <ImageButton
            android:id="@+id/clearLPButton"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:contentDescription="@string/clear_fields"
            app:srcCompat="@drawable/ic_erasor"/>

        <ImageButton
            android:id="@+id/loadSampleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/load_sample_LP"
            app:srcCompat="@drawable/ic_help_black_48dp"/>
    </LinearLayout>


</LinearLayout>