<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/lpName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="70"
            android:hint="Local Program"
            android:inputType="textPersonName"
            android:saveEnabled="false"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:background="@android:drawable/btn_dropdown"
            android:entries="@array/lp_dropdown_array"
            android:saveEnabled="false"
            android:spinnerMode="dropdown">

        </Spinner>

    </LinearLayout>


    <EditText
        android:id="@+id/lpContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/lp_download_hint"
        android:inputType="textMultiLine"
        android:saveEnabled="false"
        android:scrollbars="vertical"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/downLoadButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/blue_rounded_button"
            android:contentDescription="@string/download_lp"
            app:srcCompat="@drawable/ic_action_down_arrow"/>

        <ImageButton
            android:id="@+id/startLPButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/blue_rounded_button"
            android:contentDescription="@string/run_lp"
            app:srcCompat="@drawable/ic_action_play_arrow"/>


        <ImageButton
            android:id="@+id/saveLPButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/blue_rounded_button"
            android:contentDescription="@string/save_lp"
            app:srcCompat="@drawable/ic_action_save"
            />

        <ImageButton
            android:id="@+id/stopLPButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/blue_rounded_button"
            android:contentDescription="@string/stop_lp"
            app:srcCompat="@drawable/ic_action_stop"/>

        <ImageButton
            android:id="@+id/upLoadButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/blue_rounded_button"
            android:contentDescription="@string/upload_lp"
            app:srcCompat="@drawable/ic_action_up_arrow"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarLp"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />

</LinearLayout>