<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"

    >


    <TextView
        android:id="@+id/textViewLabelCham"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="99dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="56dp"
        android:text="@string/cham"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textViewChamTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/textViewLabelCham"
        app:layout_constraintTop_toTopOf="@+id/textViewLabelCham"/>

    <TextView
        android:id="@+id/textViewUserLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/user"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="@+id/textViewLabelCham"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelCham"
        android:layout_marginRight="0dp"/>

    <TextView
        android:id="@+id/textViewUserTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/textViewChamTemp"
        app:layout_constraintTop_toBottomOf="@+id/textViewChamTemp"
        android:layout_marginLeft="0dp"/>

    <TextView
        android:id="@+id/textViewWaitLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wait"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewRateLabel"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/textViewRateLabel"/>

    <TextView
        android:id="@+id/textViewWait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewRate"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textViewRate"/>

    <TextView
        android:id="@+id/textViewSetLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewWaitLabel"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/textViewWaitLabel"/>

    <TextView
        android:id="@+id/textViewSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewWait"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textViewWait"/>

    <Switch
        android:id="@+id/switchOnOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:checked="false"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSingleSegment"/>

    <Button
        android:id="@+id/buttonSingleSegment"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="62dp"
        android:text="Single Segment"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSetLabel"/>

    <ToggleButton
        android:id="@+id/toggleButtonHeatEnable"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_on_off"
        android:checked="false"
        android:text="ToggleButton"
        android:textOff="Heat OFF"
        android:textOn="Heat ON"
        app:layout_constraintRight_toLeftOf="@+id/switchOnOff"
        app:layout_constraintTop_toBottomOf="@+id/switchOnOff"/>

    <ToggleButton
        android:id="@+id/toggleButtonCoolEnable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_on_off"
        android:checked="false"
        android:text="ToggleButton"
        android:textOff="Cool OFF"
        android:textOn="Cool ON"
        app:layout_constraintLeft_toRightOf="@+id/switchOnOff"
        app:layout_constraintTop_toBottomOf="@+id/switchOnOff"/>

    <TextView
        android:id="@+id/textViewRateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:text="RATE:"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="@+id/textViewUserLabel"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserLabel"/>

    <TextView
        android:id="@+id/textViewRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserTemp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textViewUserTemp"/>


</android.support.constraint.ConstraintLayout>